--- a/.github/workflows/third-flow.yaml
+++ b/.github/workflows/third-flow.yaml
@@ -5,6 +5,11 @@ on:
     workflows: ["Second Flow"]
     types: [completed]
 
+  pull_request:
+    branches:
+      - "development"
+      - "main"
+
 jobs:
   second-job:
     runs-on: ubuntu-latest
