--- a/.github/workflows/second-flow.yaml
+++ b/.github/workflows/second-flow.yaml
@@ -4,7 +4,8 @@ on:
   pull_request:
     branches:
       - main
-
+env:
+    GH_TOKEN: ${{ github.token }}
 jobs:
   job2:
     runs-on: ubuntu-latest
