--- a/.github/workflows/second-flow.yaml
+++ b/.github/workflows/second-flow.yaml
@@ -1,28 +1,14 @@
-name: Workflow 2
+name: Second Flow
 
 on:
-  pull_request:
-    branches:
-      - main
-env:
-    GH_TOKEN: ${{ github.token }}
+  workflow_run:
+    workflows: ["GitHub Actions Demo"]
+    types: [completed]
+
 jobs:
-  job2:
+  second-job:
     runs-on: ubuntu-latest
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
-      - name: Wait for Workflow 1
-        run: |
-          echo "Waiting for Workflow 1 to succeed..."
-          while ! gh run list --json status --jq '.[] | select(.name=="Workflow 1") | .status' | grep -q "completed"; do
-            sleep 5
-          done
-          if ! gh run list --json conclusion --jq '.[] | select(.name=="Workflow 1") | .conclusion' | grep -q "success"; then
-            echo "Workflow 1 failed, exiting."
-            exit 1
-          fi
-
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Run Job 2
-        run: echo "Workflow 2 running"
+      - name: Hello World
+        run: echo "Hello World"
