--- a/.github/workflows/third-flow.yaml
+++ b/.github/workflows/third-flow.yaml
@@ -6,7 +6,7 @@ on:
     types: [completed]
 
 jobs:
-  second-job:
+  third-job:
     runs-on: ubuntu-latest
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
