--- a/.github/workflows/second-flow.yaml
+++ b/.github/workflows/second-flow.yaml
@@ -16,7 +16,7 @@ on:
 jobs:
   second-job:
     runs-on: ubuntu-latest
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    # if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
       - name: Hello World
         run: echo "Hello World"
