--- a/.github/workflows/second-flow.yaml
+++ b/.github/workflows/second-flow.yaml
@@ -1,10 +1,12 @@
 name: Second Flow
 
-# on:
-#   workflow_run:
-#     workflows: ["GitHub Actions Demo"]
-#     types: [completed]
-on: 
+on:
+  workflow_run:
+    workflows: 
+      - "GitHub Actions Demo"
+    types: 
+      - completed
+# on: 
   push:
     branches:
       - "development"
